<resources>
    <string name="app_name">VisionAssist</string>
    <string name="welcome_to">Welcome to</string>
    <string name="vision_assist_logo">VisionAssist Logo</string>
    <string name="permissions">Permissions</string>
    <string name="audio_permission_warning_en">Permissions are required for the app.Please select allow, to all dialogs in the next page</string>
    <string name="audio_permission_warning_ro">Sunt necesare permisiuni pentru aplicație. Vă rugăm să selectați tot timpul, in dialogurile din urmatoarea pagina</string>
    <string name="always_allow_en">Please allow access, for correct execution of the app</string>
    <string name="always_allow_ro">Vă rugăm să permiteți accesul, pentru o funcționare corectă a aplicației</string>
    <string name="settings_open_en">Please allow access from the settings page, in the Permissions section, for correct execution of the app</string>
    <string name="settings_open_ro">Vă rugăm să permiteți accesul din pagina de setări, în secțiunea Permisiuni, pentru o funcționare corectă a aplicației</string>
    <string name="settings_button_en">Settings</string>
    <string name="settings_button_ro">Setări</string>
    <string name="camera_permission_info_en">
        The application needs camera access to help you identify objects,
        read text, and navigate your surroundings.
        This permission is essential for the app to function</string>
    <string name="camera_permission_info_ro">
        Aplicația are nevoie de acces la cameră pentru a te ajuta să identifici obiecte,
        să citești text și să navighezi în împrejurimi.
        Această permisiune este esențială pentru ca aplicația să funcționeze</string>
    <string name="storage_permission_info_en">
        The application needs storage access to save and retrieve your profile settings and preferences</string>
    <string name="storage_permission_info_ro">
        Aplicația are nevoie de acces la spațiul de stocare pentru a salva
        și a recupera setările și preferințele profilului dvs</string>
    <string name="microphone_permission_info_en">
        The application needs microphone access to enable voice
        commands for the \"Find My Objects\" feature</string>
    <string name="microphone_permission_info_ro">
        Aplicația are nevoie de acces la microfon pentru a activa comenzile vocale
        folosite de functia \"Find My Objects\"</string>
    <string name="microphone_denied_info_en">
        Without microphone access, you won\'t be able to use the \"Find My Object\" feature.
        Would you like to grant access?</string>
    <string name="microphone_denied_info_ro">
        Fără acces la microfon, nu veți putea utiliza funcția \"Find My Object\".
        Doriți să acordați acces?</string>
    <string name="notification_permission_info_en">
        VisionAssist needs notification permission to show quick action shortcuts on your lock screen(QuickAction Feature).
    </string>
    <string name="notification_permission_info_ro">
        VisionAssist necesită permisiunea de notificare pentru a afișa scurtături rapide pe ecranul de blocare(QuickAction Feature).
    </string>
    <string name="give_access_en">Give Access</string>
    <string name="dont_give_en">Don\'t Give</string>
    <string name="give_access_ro">Permite acces</string>
    <string name="dont_give_ro">Nu permite acces</string>
    <string name="problem">What is your</string>
    <string name="problem2">visual problem?</string>
    <string name="initial_blindness_notification">
        For the following setup steps, please ensure that you have the TalkBack feature enabled on your device.
    </string>
    <string name="tutorial_speak">
        Welcome to VissionAssist app,
        the sound you heard is telling you that,
        the following content that will be spoken
        could be repeated.
        By pressing volume down button once you will,
        repeat the spoken sentence at a slower rate,
        and by pressing volume down second time,
        repeat at an higher rate.
        After the spoken sentence the system will wait 2 seconds
        if you wish to repeat the sentence
    </string>
    <string name="config_activity">
        The current page is about deciding whether you want a low-eyesight or blindness profile.
        In the buttom of the page there exists 2 buttons.
        The left one is for choosing blindness profile.
        The right one is for choosing low-eyesight profile.
    </string>
    <string name="language_icon">Language selection icon</string>
    <string name="dropdown_arrow">Dropdown arrow</string>
    <string name="load_profile_info_en">
        Choose this option if you have an existing profile saved locally on your device or stored remotely in the cloud.
    </string>
    <string name="load_profile_info_ro">
        Alegeți această opțiune dacă aveți un profil existent salvat local pe dispozitiv sau stocat remote în cloud.
    </string>
    <string name="new_profile_info_en">
        Choose this option if you are new to the platform or want to create a fresh profile from scratch.
    </string>
    <string name="new_profile_info_ro">
        Alegeți această opțiune dacă sunteți nou pe platformă sau doriți să creați un profil nou de la zero.
    </string>
    <string name="load_profile_en">Load profile</string>
    <string name="load_profile_ro">Încarcă profil</string>
    <string name="new_profile_en">New profile</string>
    <string name="new_profile_ro">Creează profil</string>
    <string name="network_miss_en">The device has no access to the internet, try to connect to a network and try again</string>
    <string name="network_miss_ro">Dispozitivul nu are acces la internet, încercați să vă conectați la o rețea și încercați din nou</string>
    <string name="account_ne_en">The email is not registered in the database</string>
    <string name="account_ne_ro">Adresa de e-mail nu este înregistrată în baza de date</string>
    <string name="generic_error_en">Error was encountered while fetching the profile</string>
    <string name="generic_error_ro">A apărut o eroare la preluarea profilului</string>
    <string name="create_account_en">Creating account, please wait</string>
    <string name="create_account_ro">Contul se creează, vă rugăm așteptați</string>
    <string name="created_account_en">Account created successfully</string>
    <string name="created_account_ro">Cont creeat cu succes</string>
    <string name="already_exists_account_en">Email already exists</string>
    <string name="already_exists_account_ro">Email-ul deja există</string>
    <string name="invalid_email_en">Invalid mail address, please provide an email address that exists</string>
    <string name="invalid_email_ro">Email-ul este invalid, vă rugăm să furnizați o adresă de e-mail existentă</string>
    <string name="generic_error2_en">Error was encountered while creating the profile</string>
    <string name="generic_error2_ro">A apărut o eroare la crearea profilului</string>
    <string name="invalid_chars_en">Invalid combination of characters, only letters accepted, not digits, should start with capital letter and continue with lowercase</string>
    <string name="invalid_chars_ro">Combinație invalidă de caractere, se acceptă doar litere, nu cifre, ar trebui să înceapă cu majusculă și să continue cu litere de mână</string>
    <string name="contribute_en">
        Contribute to our research?~\n\nBy agreeing with this statement,
        you will send your personal data such as name, age, and vision problems to our database, to help us target more persons with vision difficulties
    </string>
    <string name="contribute_ro">
        Contribui la cercetarea noastră?~\n\n
        Prin acceptarea acestei declarații, veți trimite datele dvs. personale precum numele,
        vârsta și problemele de vedere în baza noastră de date, pentru a ne ajuta să țintim mai multe persoane cu dificultăți de vedere
    </string>
    <string name="hello_en">What\'s your name?</string>
    <string name="hello_ro">Care este numele tău?</string>
    <string name="old_en">How old are you?</string>
    <string name="old_ro">Câți ani aveți?</string>
    <string name="visual_condition_en">What type of vision difficulty do you have?</string>
    <string name="visual_condition_ro">Ce tip de deficiență de vedere aveți?</string>
    <string name="about_en">A little about yourself</string>
    <string name="about_ro">Puțin despre tine</string>
    <string name="tts_pitch_en">Pitch of assistant</string>
    <string name="tts_pitch_ro">Ton asistent</string>
    <string name="tts_speed_en">Speed of assistant</string>
    <string name="tts_speed_ro">Viteza asistentului</string>
    <string name="bbox_info_en">In this page you can select the color of bounding boxes, text background and text for detection activity.\nBoxes can be of various sizes, in e.g 20x20, 40x40, 80x80</string>
    <string name="bbox_info_ro">În această pagină poți selecta culoarea casetelor de delimitare, fundalul textului și textul pentru activitatea de detecție.\nCasetele pot avea diferite dimensiuni, de exemplu 20x20, 40x40, 80x80</string>
    <string name="caption_info_en">In this page you can select the color of text background and text for caption activity</string>
    <string name="caption_info_ro">În această pagină poți selecta culoarea fundalului textului și a textului pentru activitatea de subtitrare</string>
    <string name="ui_size_info_en">UI style and size~\n\nWe inform you that, the general size of the user interface(buttons, text) will be your phone\'s default.\nAlthough with this settings, you can still manually resize the outputs of the AI models:\nwidth of boxes and sizes of labels and text</string>
    <string name="ui_size_info_ro">Stil și dimensiune UI~\n\nVă informăm că, dimensiunea generală a interfeței utilizatorului(butoane, text) va fi cea implicită a telefonului dvs.\nDeși cu aceste setări, puteți totuși redimensiona manual rezultatele modelelor AI:\nlățimea casetelor și dimensiunile etichetelor și textului</string>
    <string name="std_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce odio sed tellus eleifend tempor</string>
    <string name="hash_cache_title_en">Use\nHash Caching?</string>
    <string name="hash_cache_title_ro">Foloseşti\nHash Caching?</string>
    <string name="hash_cache_info_first_en">Hash Caching~To save you time, the app can remember similar photos you\'ve already taken. If you capture the same scene again, it reuses the old description instead of processing it again. This makes the app much faster</string>
    <string name="hash_cache_info_first_ro">Hash Caching~Pentru a vă economisi timp, aplicaţia poate reţine fotografiile similare pe care le-aţi făcut deja. Dacă capturaţi aceeaşi scenă din nou, reutilizează descrierea veche în loc să o proceseze din nou. Acest lucru face aplicaţia mult mai rapidă</string>
    <string name="hash_cache_info_second_en">Hash Caching~Light:\n-will use less storage, but inference may be slower\n\nHeavy:\n-will use more storage, but inference will be fast</string>
    <string name="hash_cache_info_second_ro">Hash Caching~Light:\n-va folosi mai puţin spaţiu, dar inferenţa poate fi mai lentă\n\nHeavy:\n-va folosi mai mult spaţiu, dar inferenţa va fi rapidă</string>
    <string name="env_reports_title_en">Enable Environment\nReports?</string>
    <string name="env_reports_title_ro">Activează rapoartele\nde mediu?</string>
    <string name="env_reports_info_en">Environment reports~The application will use another model when making detections, to help identify the main scene, in order to record the objects found in that environment.\n\nThis will make statistics about objects encountered in every scene\n\nDisadvantages:\n-inference may be slower because of an added model</string>
</resources>