<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".activities.newprofile.WelcomeActivity">

    <!-- Status Bar Spacer -->
    <View
        android:id="@+id/status_bar_spacer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/status_bar_spacer"
        android:layout_marginTop="-25dp"
        android:layout_marginLeft="-5dp"
        android:contentDescription="@string/vision_assist_logo"
        android:src="@drawable/vision_assist_logo" />

    <View
        android:id="@+id/centrum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <!-- Welcome to VissionAssist -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/centrum"
        android:layout_marginVertical="20dp"
        android:text="@string/welcome_to"
        android:textColor="@color/std_cyan"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_light_ttf"
        android:letterSpacing="0.15" />
    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/std_cyan"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_light_ttf"
        android:letterSpacing="0.15" />
    <TextView
        android:id="@+id/problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name_text"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/problem"
        android:textColor="@color/std_cyan"
        android:textSize="27sp"
        android:fontFamily="@font/roboto_semibold"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/problem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/problem"
        android:layout_centerHorizontal="true"
        android:text="@string/problem2"
        android:textColor="@color/std_cyan"
        android:textSize="27sp"
        android:fontFamily="@font/roboto_semibold"
        android:gravity="center_horizontal"
        />
</RelativeLayout>