<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".activities.newprofile.WelcomeActivity">

    <!-- Status Bar Spacer -->
    <View
        android:id="@+id/status_bar_spacer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_below="@id/status_bar_spacer"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/vision_assist_logo"
        android:src="@drawable/vision_assist_logo" />

    <!-- Welcome to VissionAssist -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/welcome_to"
        android:textColor="@color/std_cyan"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_light_ttf"
        android:letterSpacing="0.15" />
    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/std_cyan"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_light_ttf"
        android:letterSpacing="0.15" />

    <!-- Language Selector -->
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/language_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/app_name_text" />

    <!-- LoadingBox -->
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/loading_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <!-- Next -->
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>